Removed unused Mushroom Dirt block